--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.11.0",
     "react-markdown": "^4.2.2",
-    "react-syntax-highlighter": "^11.0.2"
+    "react-syntax-highlighter": "^11.0.2",
+    "axios": "^0.19.0"
   },
   "devDependencies": {
-    "axios": "^0.19.0",
     "cross-env": "^6.0.3"
   }
 }
