--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "cross-env NODE_ENV=development PORT=3008 node server.js",
-    "build": "next build  --ignore-stderr",
+    "build": "next build",
     "start": "next start -p 3008",
     "export": "npm run build && next export"
   },
