--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "cross-env NODE_ENV=development PORT=3008 node server.js",
     "build": "next build",
-    "start": "next build && next start -p 3008",
+    "start": "next build && cross-env NODE_ENV=production PORT=3008 node server.js",
     "export": "npm run build && next export"
   },
   "keywords": [],
