--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "cross-env NODE_ENV=development PORT=3008 node server.js",
+    "dev": "cross-env NODE_ENV=development node server.js",
     "build": "next build",
-    "start": "next build && cross-env NODE_ENV=production PORT=3008 pm2 start server.js",
-    "start2": "next build && cross-env NODE_ENV=production PORT=3008 pm2 start server2.js",
+    "start": "next build && cross-env NODE_ENV=production pm2 start server.js",
+    "start2": "next build && cross-env NODE_ENV=production pm2 start server2.js",
     "export": "npm run build && next export"
   },
   "keywords": [],
